Chore (meta): modify homepage

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "Public.js",
   "scripts": {},
   "keywords": [],
-  "homepage": "https://github.com/ServerfulArch/Public#readme",
+  "homepage": "https://github.com/ServerfulArch/Core#readme",
   "repository": "github:ServerfulArch/Public",
   "author": "QSmally",
   "license": "Apache-2.0",
